--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -16,9 +16,17 @@
                                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                       Hi!, <%= current_user.email %>
                                       <b class="caret"></b>
-                                  </a>
-                                  <ul class="dropdown-menu">
-                                      <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
+                </a>
+
+                                      <ul class="dropdown-menu">
+                                            <li> <%= link_to("My Groups", account_groups_path) %></li>
+                                            <li class="divider"> </li>
+                                            <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
+                                        </ul>
+                                      <ul class="dropdown-menu">
+
+
+
                                   </ul>
                                 </li>
                               <% end %>
